--- a/Loon.conf
+++ b/Loon.conf
@@ -71,13 +71,13 @@ https://kelee.one/Tool/Loon/Lsr/REGION_SPLITTER.lsr, policy=DIRECT, tag=CN REGIO
 [Script]
 
 [Plugin]
-https://kelee.one/Tool/Loon/Lpx/Block_HTTPDNS.lpx, enabled = true
-https://kelee.one/Tool/Loon/Lpx/BlockAdvertisers.lpx, enabled = true
-https://kelee.one/Tool/Loon/Lpx/Prevent_DNS_Leaks.lpx, policy = Global, enabled = true
-https://kelee.one/Tool/Loon/Lpx/Node_detection_tool.lpx, enabled = true
+https://kelee.one/Tool/Loon/Lpx/Block_HTTPDNS.lpx, enabled=true
+https://kelee.one/Tool/Loon/Lpx/BlockAdvertisers.lpx, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Prevent_DNS_Leaks.lpx, policy=Global, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Node_detection_tool.lpx, enabled=true
 
 [Mitm]
-hostname = 
-ca-p12 = 
-ca-passphrase = 
-skip-server-cert-verify = false
+hostname=
+ca-p12=
+ca-passphrase=
+skip-server-cert-verify=false
