--- a/Loon.conf
+++ b/Loon.conf
@@ -36,7 +36,7 @@ US=NameRegex, FilterKey="(?i)(美国|圣何塞|US|United States)"
 
 [Proxy Group]
 SELECT=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Global.png
-OpenAI=select, TW, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/ChatGPT.png
+OpenAI=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/ChatGPT.png
 Telegram=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Telegram.png
 YouTube=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/YouTube.png
 Spotify=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Spotify.png
