--- a/Loon.conf
+++ b/Loon.conf
@@ -31,18 +31,18 @@ bypass-tun=10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12
 
 [Remote Filter]
 TW=NameRegex, FilterKey="(?i)(台湾|彰化|TW|Tai)"
-KR=NameRegex, FilterKey="(?i)(韩国|首尔|KR|Seoul)"
+SG=NameRegex, FilterKey="(?i)(新加坡|狮城|SG|Singapore)"
 US=NameRegex, FilterKey="(?i)(美国|圣何塞|US|United States)"
 
 [Proxy Group]
-SELECT=select, TW, KR, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Global.png
-Telegram=select, TW, KR, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Telegram.png
-OpenAI=select, TW, KR, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/ChatGPT.png
-YouTube=select, TW, KR, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/YouTube.png
-Netflix=select, TW, KR, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Netflix.png
-Spotify=select, TW, KR, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Spotify.png
+SELECT=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Global.png
+Telegram=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Telegram.png
+OpenAI=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/ChatGPT.png
+YouTube=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/YouTube.png
+Netflix=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Netflix.png
+Spotify=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Spotify.png
 Taiwan=select, TW, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Taiwan.png
-Korea=select, KR, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Korea.png
+Singapore=select, SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Singapore.png
 United States=select, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/United_States.png
 
 [Rule]
