--- a/Loon.conf
+++ b/Loon.conf
@@ -31,19 +31,17 @@ bypass-tun=10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12
 
 [Remote Filter]
 TW=NameRegex, FilterKey="(?i)(台湾|彰化|TW|Tai)"
-SG=NameRegex, FilterKey="(?i)(新加坡|狮城|SG|Singapore)"
 DE=NameRegex, FilterKey="(?i)(德国|法兰克福|DE|Germany)"
 US=NameRegex, FilterKey="(?i)(美国|圣何塞|US|United States)"
 
 [Proxy Group]
-SELECT=select, TW, SG, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Global.png
-Telegram=select, TW, SG, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Telegram.png
-OpenAI=select, TW, SG, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/ChatGPT.png
-YouTube=select, TW, SG, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/YouTube.png
-Netflix=select, TW, SG, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Netflix.png
-Spotify=select, TW, SG, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Spotify.png
+SELECT=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Global.png
+Telegram=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Telegram.png
+OpenAI=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/ChatGPT.png
+YouTube=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/YouTube.png
+Netflix=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Netflix.png
+Spotify=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Spotify.png
 Taiwan=select, TW, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/China.png
-Singapore=select, SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Singapore.png
 Germany=select, DE, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Germany.png
 United States=select, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/United_States.png
 
@@ -78,7 +76,7 @@ https://kelee.one/Tool/Loon/Lsr/REGION_SPLITTER.lsr, policy=DIRECT, tag=CN REGIO
 [Plugin]
 https://kelee.one/Tool/Loon/Lpx/Block_HTTPDNS.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/BlockAdvertisers.lpx, enabled=true
-https://kelee.one/Tool/Loon/Lpx/Prevent_DNS_Leaks.lpx, policy=Global, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Prevent_DNS_Leaks.lpx, policy=SELECT, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Node_detection_tool.lpx, enabled=true
 
 [Mitm]
