--- a/Loon.conf
+++ b/Loon.conf
@@ -31,18 +31,17 @@ bypass-tun=10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12
 
 [Remote Filter]
 TW=NameRegex, FilterKey="(?i)(台湾|彰化|TW|Tai)"
-DE=NameRegex, FilterKey="(?i)(德国|法兰克福|DE|Germany)"
+SG=NameRegex, FilterKey="(?i)(新加坡|狮城|SG|Singapore)"
 US=NameRegex, FilterKey="(?i)(美国|圣何塞|US|United States)"
 
 [Proxy Group]
-SELECT=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Global.png
-Telegram=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Telegram.png
-OpenAI=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/ChatGPT.png
-YouTube=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/YouTube.png
-Netflix=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Netflix.png
-Spotify=select, TW, DE, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Spotify.png
+SELECT=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Global.png
+Telegram=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Telegram.png
+OpenAI=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/ChatGPT.png
+YouTube=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/YouTube.png
+Spotify=select, TW, SG, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Spotify.png
 Taiwan=select, TW, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/China.png
-Germany=select, DE, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Germany.png
+Singapore=select, SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/Singapore.png
 United States=select, US, img-url=https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/IconSet/Color/United_States.png
 
 [Rule]
@@ -62,7 +61,6 @@ FINAL, SELECT
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Telegram/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/OpenAI/OpenAI.list, policy=OpenAI, tag=OpenAI, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/YouTube/YouTube.list, policy=YouTube, tag=YouTube, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Netflix/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Spotify/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
 https://kelee.one/Tool/Loon/Lsr/LAN_SPLITTER.lsr, policy=DIRECT, tag=LAN, enabled=true
 https://kelee.one/Tool/Loon/Lsr/REGION_SPLITTER.lsr, policy=DIRECT, tag=CN REGION, enabled=true
